<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="server_timequery_url">http://192.168.1.7:8080/server/query</string>
    <string name="server_dbquery_url">http://192.168.1.7:8080/server/getdatabase</string>

    <string name="fromDevice_timequery_url">http://192.168.1.7:8080/server/query</string>
    <string name="fromDevice_dbquery_url">http://192.168.1.7:8080/server/getdatabase</string>
    <string name="fromADM_timequery_url">http://10.0.2.2:8080/server/query</string>
    <string name="fromADM_dbquery_url">http://10.0.2.2:8080/server/getdatabase</string>
    
    
    <string name="app_name">CmuBusTracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_again">Search Again</string>
    <string name="title_activity_select_station_and_bus">Select Station and Bus</string>
    <string name="title_activity_locate_station">Locate Station</string>
    <string name="title_activity_search_station">Search Station</string>
    <string name="title_activity_view_schedule">View Schedule</string>
    <string name="Find_Next_Bus">Find Next Bus</string>
    <string name="Find_Station">Find Station</string>
    <string name="enterAddress">Enter an address to search for a stop</string>
    <string name="search">Search</string>
    <string name="example_stop_name">ExampleStopName</string>
    <string name="example_mile_string">xx miles</string>
    <string name="example_walkingdist_string">xx minutes</string>
    <string name="example_bus_name">ExampleBus</string>
    <string name="example_bus_direction">ExampleDirection</string>
    <string name="example_stop_address">ExampleStopAddress</string>
    <string name="example_srcinfo_string">local/remote</string>
    <string name="help">Help</string>
    <string name="settings_title">Settings</string>
    <string name="add_favorites_title">Add to Favorites</string>
    <string name="pref_title_remote">use data from server</string>
    <string name="pref_summary_remote">Check to let the app connect to the server to fetch 
        data. If the app cannot access the server, local schedule database is used.</string>
    <string name="pref_title_favorites">favorite routes</string>
    <string name="pref_summary_favorites">You can manualy edit your favorite routes here, 
        e.g. delete them</string>
    <string name="update_db_title">Update Schedule</string>    
    <string name="title_activity_use_favorites">UseFavoritesActivity</string>

</resources>
