<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:padding="5dp"
    android:baselineAligned="false" >

    <!-- minutes and miles - take some width -->
    <LinearLayout
        android:id="@+id/layoutMinutesMiles"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

	   	<TextView
	       	android:id="@+id/walkingdistance"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
	       	android:text="@string/example_walkingdist_string"
	       	android:textAppearance="@android:style/TextAppearance.Small" />
	
	   	<TextView
	    	android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
	    	android:text="@string/example_mile_string"
	    	android:textAppearance="@android:style/TextAppearance.Small"  />
    </LinearLayout>
    
    <!-- name and address - take free space to the left of mins&miles -->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_toLeftOf="@id/layoutMinutesMiles"
        android:gravity="center_vertical|left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/stopName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/example_stop_name"
            android:textAppearance="@android:style/TextAppearance.Large"  />

        <TextView
            android:id="@+id/stopAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/example_stop_address" />
    </LinearLayout>
	   	
</RelativeLayout>
